hphp/test/slow/dv_array/hh-only2.php.expectf
Fatal error: A closing square bracket (']') is expected here. in %s/test/slow/dv_array/hh-only2.php on line 4